# Sleak

./: LICENSE  README.md
linux/: README.md
macos/: README.md
windows/: .gitignore  README.md  package-lock.json  package.json
windows/public/: index.html
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/src/: main.rs  windows_overlay.rs
